[package]
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
name = "elfutils"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.5"

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[dependencies.libdw]
optional = false
path = "libdw"
version = "0.0.5"

[dependencies.libdw-sys]
optional = false
path = "libdw-sys"
version = "0.0.5"

[dependencies.libdwelf]
optional = false
path = "libdwelf"
version = "0.0.5"

[dependencies.libdwfl]
optional = false
path = "libdwfl"
version = "0.0.5"

[dependencies.libelf]
optional = false
path = "libelf"
version = "0.0.5"

[dev-dependencies]
cpp_demangle = "0.2.5"
libc = "0.2"

[workspace]
members = [
    "libelf-sys",
    "libelf",
    "libdw-sys",
    "libdw",
    "libdwfl",
    "libdwelf",
]
