[package]
name = "elfutils"
version = "0.0.6"
repository = "https://github.com/cuviper/elfutils-rs"
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
license = "MIT/Apache-2.0"
edition = "2018"
include = [
    "Cargo.toml",
    "LICENSE-*",
    "src/**/*.rs",
]

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[dependencies.libdw]
optional = false
path = "libdw"
version = "0.0.6"

[dependencies.libdw-sys]
optional = false
path = "libdw-sys"
version = "0.0.6"

[dependencies.libdwelf]
optional = false
path = "libdwelf"
version = "0.0.6"

[dependencies.libdwfl]
optional = false
path = "libdwfl"
version = "0.0.6"

[dependencies.libelf]
optional = false
path = "libelf"
version = "0.0.6"

[dev-dependencies]
cpp_demangle = "0.2.5"
libc = "0.2"
rustc-demangle = "0.1.15"

[workspace]
members = [
    "libelf-sys",
    "libelf",
    "libdw-sys",
    "libdw",
    "libdwfl",
    "libdwelf",
]
