[package]
authors = ["Josh Stone <jistone@redhat.com>"]
build = "build.rs"
description = "Bindings to elfutils"
license = "MIT/Apache-2.0"
name = "libdw-sys"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.2"
include = ["Cargo.toml", "build.rs", "src/**/*.rs"]

[build-dependencies]
pkg-config = "0.3.8"

[dependencies]

[dependencies.libelf-sys]
optional = false
path = "../libelf-sys"
version = "0.0.2"
