[package]
authors = ["Josh Stone <jistone@redhat.com>"]
build = "build.rs"
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
links = "dw"
name = "libdw-sys"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.5"
edition = "2018"

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[build-dependencies]
pkg-config = "0.3.8"

[dependencies]
libc = "0.2"

[dependencies.libelf-sys]
optional = false
path = "../libelf-sys"
version = "0.0.5"
