[package]
name = "libdw-sys"
version = "0.0.6"
repository = "https://github.com/cuviper/elfutils-rs"
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"
links = "dw"
include = [
    "Cargo.toml",
    "LICENSE-*",
    "build.rs",
    "src/**/*.rs",
]

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[build-dependencies]
pkg-config = "0.3.15"

[dependencies]
libc = "0.2"

[dependencies.libelf-sys]
optional = false
path = "../libelf-sys"
version = "0.0.6"
