[package]
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
license = "MIT/Apache-2.0"
name = "libdw"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.2"
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]

[dependencies.libdw-sys]
optional = false
path = "../libdw-sys"
version = "0.0.2"

[dependencies.libelf]
optional = false
path = "../libelf"
version = "0.0.2"
