[package]
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
name = "libdw"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.5"
edition = "2018"

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[dependencies]
libc = "0.2"

[dependencies.libdw-sys]
optional = false
path = "../libdw-sys"
version = "0.0.5"

[dependencies.libelf]
optional = false
path = "../libelf"
version = "0.0.5"
