[package]
name = "libdw"
version = "0.1.0"
repository = "https://github.com/cuviper/elfutils-rs"
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
license = "MIT OR Apache-2.0"
edition = "2021"
include = [
    "Cargo.toml",
    "LICENSE-*",
    "src/**/*.rs",
]

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[dependencies]
libc = "0.2"

[dependencies.libdw-sys]
optional = false
path = "../libdw-sys"
version = "0.1.0"

[dependencies.libelf]
optional = false
path = "../libelf"
version = "0.1.0"
