[package]
name = "libdwelf"
version = "0.0.2"
license = "MIT/Apache-2.0"
authors = ["Josh Stone <jistone@redhat.com>"]
repository = "https://github.com/cuviper/elfutils-rs"
description = "Bindings to elfutils"
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]

[dependencies.libdw-sys]
optional = false
path = "../libdw-sys"
version = "0.0.2"
