[package]
name = "libdwelf"
version = "0.0.5"
license = "MIT/Apache-2.0"
authors = ["Josh Stone <jistone@redhat.com>"]
repository = "https://github.com/cuviper/elfutils-rs"
description = "Bindings to elfutils"
include = ["Cargo.toml", "src/**/*.rs"]
edition = "2018"

[package.metadata.docs.rs]
dependencies = [ "libdw-dev" ]

[dependencies]

[dependencies.libdw-sys]
optional = false
path = "../libdw-sys"
version = "0.0.5"

[dependencies.libdw]
optional = false
path = "../libdw"
version = "0.0.5"

[dependencies.libelf]
optional = false
path = "../libelf"
version = "0.0.5"
