[package]
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
name = "libdwfl"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.4"

[dependencies]
libc = "0.2"

[dependencies.libdw]
optional = false
path = "../libdw"
version = "0.0.4"

[dependencies.libdw-sys]
optional = false
path = "../libdw-sys"
version = "0.0.4"
