[package]
authors = ["Josh Stone <jistone@redhat.com>"]
build = "build.rs"
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
links = "elf"
name = "libelf-sys"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.4"

[build-dependencies]
pkg-config = "0.3.8"

[dependencies]
libc = "0.2"
