[package]
name = "libelf-sys"
version = "0.0.6"
repository = "https://github.com/cuviper/elfutils-rs"
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"
links = "elf"
include = [
    "Cargo.toml",
    "LICENSE-*",
    "build.rs",
    "src/**/*.rs",
]

[package.metadata.docs.rs]
dependencies = [ "libelf-dev" ]

[build-dependencies]
pkg-config = "0.3.15"

[dependencies]
libc = "0.2"
