[package]
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
name = "libelf"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.4"

[dependencies]
libc = "0.2"

[dependencies.libelf-sys]
optional = false
path = "../libelf-sys"
version = "0.0.4"
