[package]
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
include = [
    "Cargo.toml",
    "src/**/*.rs",
]
license = "MIT/Apache-2.0"
name = "libelf"
repository = "https://github.com/cuviper/elfutils-rs"
version = "0.0.5"
edition = "2018"

[package.metadata.docs.rs]
dependencies = [ "libelf-dev" ]

[dependencies]
libc = "0.2"

[dependencies.libelf-sys]
optional = false
path = "../libelf-sys"
version = "0.0.5"
