[package]
name = "libelf"
version = "0.0.6"
repository = "https://github.com/cuviper/elfutils-rs"
authors = ["Josh Stone <jistone@redhat.com>"]
description = "Bindings to elfutils"
license = "MIT/Apache-2.0"
edition = "2018"
include = [
    "Cargo.toml",
    "LICENSE-*",
    "src/**/*.rs",
]

[package.metadata.docs.rs]
dependencies = [ "libelf-dev" ]

[dependencies]
libc = "0.2"

[dependencies.libelf-sys]
optional = false
path = "../libelf-sys"
version = "0.0.6"
